# project_nolimit_math

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt  setup.py
file/: main.py  sympy_limit.py  sympy_limit.ui
nolimit/: __init__.py  main.py  nolimit.ui
nolimit/nolimit_sympy/: nolimit_sympy.py  nolimit_sympy.ui
nolimit/sympy/: nolimit_sympy.py  nolimit_sympy.ui
sitoweb/: index.php  style.css
sympy/: main.py  main.ui
website/: style.css
